Corrected and updated index.html
Fixed some issues with your HTML structure. I wrote some notes where necessary.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body>
 <div class="container">
   <nav>
-    <h3> <b>Sneaker</b>
+<!--     Only Add h1 tag to your site name -->
+    <h1>Sneaker</h1>
     <a href="">Collections</a>
     <a href=""> Men</a>
     <a href=""> Women</a>
     <a href=""> About</a>
     <a href="">Contact</a>
-  </h3>
   </nav>
 
   <aside id="rsb">
@@ -44,8 +44,9 @@
      Fall Limited Edition Sneakers 
      </B> 
     <br>
-     <div class="no"> These low-profile sneakers are your perfect casual wear companion. Featuring a 
-      durable rubber outer sole, they’ll withstand everything the weather can offer.</div>
+<!--       Use the p tag instead of the div used -->
+     <p class="no"> These low-profile sneakers are your perfect casual wear companion. Featuring a 
+      durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
       
       <h2>$125.00 <i id="price">50%</i>
        <h4>$250.00</h4>
